--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,12 @@ jobs:
     name: Docker build & push image
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - 
+        name: Checkout employee-assessment-fe
+        uses: actions/checkout@v2
         with:
           ssh-key: ${{ secrets.PRIVATE_SSH_KEY }}
-          repository: a1lplatform/employee-assessment-fe@master
+          repository: a1lplatform/employee-assessment-fe.git@master
       -
         name: Checkout
         uses: actions/checkout@v3
