--- a/nginx/etc/conf.d/nginx.prod.conf
+++ b/nginx/etc/conf.d/nginx.prod.conf
@@ -1,21 +1,31 @@
 server {
-        listen 80;
-        server_name  localhost;
+  listen 80;
+  server_name app.newskyexpress.com.vn;
+  root /usr/share/nginx/html;
+  index  index.html index.htm;
+  include /etc/nginx/mime.types;
+  gzip on;
+  gzip_min_length 1000;
+  gzip_proxied expired no-cache no-store private auth;
+  gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+  location / {
+    index index.html index.htm;
+    try_files $uri $uri/ /index.html =404;
+  }
+}
 
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        include /etc/nginx/mime.types;
-
-        gzip on;
-        gzip_min_length 1000;
-        gzip_proxied expired no-cache no-store private auth;
-        gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-
-        location / {
-
-        }
-
-        location /qlhr/ {
-            autoindex on;
-        }
-    }
+server {
+  listen 80;
+  server_name qlhr.vn;
+  root /usr/share/nginx/html/qlhr;
+  index  index.html index.htm;
+  include /etc/nginx/mime.types;
+  gzip on;
+  gzip_min_length 1000;
+  gzip_proxied expired no-cache no-store private auth;
+  gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+  location / {
+    index index.html index.htm;
+    try_files $uri $uri/ /index.html =404;
+  }
+}
