--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,17 +9,17 @@ jobs:
     name: Docker build & push image
     runs-on: ubuntu-latest
     steps:
-      - 
-        name: Checkout employee-assessment-fe
-        uses: actions/checkout@main
-        with:
-          ssh-key: ${{ secrets.PRIVATE_SSH_KEY }}
-          repository: a1lplatform/employee-assessment-fe
+#      - 
+#        name: Checkout employee-assessment-fe
+#        uses: actions/checkout@main
+#        with:
+#          ssh-key: ${{ secrets.PRIVATE_SSH_KEY }}
+#          repository: a1lplatform/employee-assessment-fe
       -
         name: Checkout a1-platform-fe
         uses: actions/checkout@master
         with:
-          ssh-key: ${{ secrets.PRIVATE_SSH_KEY }}
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
           repository: phillipsho/a1-platform-fe
       -
         name: Checkout
